# SeatManager

./: README.md  README_CN.md
Version1.7.2(C++ version)/: CodeMap1.dgml  SeatM(C++).sln
Version1.7.2(C++ version)/Debug/: SeatM(C++).ilk  座位表1.txt
Version1.7.2(C++ version)/Project3/: Project3.vcxproj  Project3.vcxproj.filters  UI.cpp  座位表1.txt  开源.cpp  源.cpp  源1.cpp  读入文件.TXT
Version1.7.2(C++ version)/Project3/Debug/: vc142.idb  (+1 more)
Version1.7.2(C++ version)/Release/: SeatM(C++).iobj  SeatM(C++).ipdb
Version1.8.x/1.8.0(Python version)/: main.py
Version1.8.x/1.8.0p(Cpp version)/: CMakeLists.txt  SeatManagerImp.cpp  SeatManagerImp.h  Student.cpp  Student.h  main.cpp  读入文件.txt
Version1.8.x/1.8.x(Java version)/: seat_table1.txt  seat_table10.txt  seat_table2.txt  seat_table3.txt  seat_table4.txt  seat_table5.txt  seat_table6.txt  seat_table7.txt  seat_table8.txt  seat_table9.txt  读入文件.TXT
Version2.0/: OPTIMIZATION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART_CN.md  README.md  README_CN.md  benchmark.py  build.bat  build.sh  debug_import.py  main.py  requirements.txt  setup.py
Version2.0/backend/: CMakeLists.txt
Version2.0/backend/include/: Classroom.h  Seat.h  SeatManager.h  Student.h
Version2.0/backend/src/: Classroom.cpp  Seat.cpp  SeatManager.cpp  Student.cpp  bindings.cpp
Version2.0/backend/tests/: test_backend.py
Version2.0/data/: sample_config.json  sample_students.csv  sample_students.txt  sample_students_cn.csv  sample_students_cn.txt
Version2.0/docs/: BACKEND_FIX_CN.md  BUILD_GUIDE.md  BUILD_GUIDE_CN.md  USER_MANUAL.md  USER_MANUAL_CN.md
(+36 files in other folders)
